--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "karma-safari-launcher": "^1.0.0",
     "typescript": "~5.5.2"
   }
 }
